# dexes-indexer

./: .gitignore  CITATION.cff  Cargo.nix  Cargo.toml  README.md  flake.nix  shell.nix
.sqlx/: query-095e7e26965d8daff2293950567a630dfd9964a216904b9f9af91e5f53e4bf1f.json  query-0c51450f327121270edb158703cf4007b534d888ff1de3ad4a3f73019cb432c1.json  query-2051e32d8f2759176829576cf1835ecc0aea03f40cbf534731a707a231f45b31.json  query-8005b93787d410550c4cb39147432b68febb8a7a71b3c2515f50b262356cd200.json  query-861666f4a5f1e2599ee76f867f7264e4b26a971b5c89533e20c775a862f3181d.json  query-a42f1084892a35d4b843e12e623d041d83d1fc1a3877d6b4fb21f5d50ff4f8fb.json  query-a758f9c2300c64cda9cbcf5fd3bb23e259d9aca2fa1b63d847d12aef83388e89.json
apps/boostrapper/: Cargo.toml
apps/boostrapper/src/: fetcher.rs  main.rs
apps/bootstrapper/: Cargo.toml  default.nix
apps/bootstrapper/src/: fetcher.rs
apps/bootstrapper/src/cli/: mod.rs
apps/bootstrapper/src/cli/actions/: run.rs
apps/pathfinder/: Cargo.toml
apps/pathfinder/src/: cli.rs  main.rs
apps/pathfinder/src/actions/: find.rs  mod.rs
contracts/: foundry.toml
contracts/src/: Erc20Mock.sol  Help.sol
crates/: Cargo.nix
crates/bindings/: Cargo.toml
crates/bindings/src/: context.rs  erc20.rs  erc20_mock.rs  help.rs  lib.rs  math.rs  safe_math.rs  uniswap_v2_factory.rs  uniswap_v2_pair.rs  uniswap_v2erc20.rs  uq11_2x_112.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: blocks.rs  factories.rs  lib.rs  pairs.rs  reserves.rs
docs/paper/: .gitignore  bibliography.bib  index.tex
infrastructure/dev/: docker-compose.yaml
migrations/: 001_init.sql
nix/: dev-db.nix  foundry.nix  python.nix
nix/rust-overlay/: flake-module.nix
scripts/: graph.py
src/: fetcher.rs  main.rs
src/cli/: mod.rs
src/cli/actions/: bootstrap.rs
src/config/: mod.rs
src/database/: blocks.rs  mod.rs  reserves.rs
src/database/pairs/: mod.rs
src/database/tokens/: mod.rs
