[package]
name = "dexes-indexer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
        "./crates/bindings",
]

[dependencies]
ethers = "2.0.13"
serde = "1.0.196"
toml = "0.8.10"
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bindings = { path = "./crates/bindings" }
futures = "0.3.30"

[dependencies.clap]
version = "4.5.3"
features = [ "derive" ]

[dependencies.tokio]
version = "1.36.0"
default-features = false
features = ["macros", "rt", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [ "runtime-tokio", "bigdecimal", "postgres", "chrono", "macros" ]
