[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
sqlx.workspace = true
tokio.workspace = true
ethers.workspace = true

database.workspace = true
bindings.workspace = true
config.workspace = true
